Add first version of edges showing node dependencies
